<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Neptune Engine</string>
    <string name="projects">Projects</string>
    <string name="no_projects">No projects</string>
    <string name="create_project">Create project</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="trash">Remove object</string>
    <string name="save">Save scene</string>
    <string name="saved_successfully">Scene saved successfully</string>
    <string name="centralize">Reset camera</string>
    <string name="new_object">New object</string>
    <string name="square">Square</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="backup">Backup</string>
    <string name="enter_valid_name">Please insert a valid name</string>
    <string name="project_exists">This project already exists</string>
</resources>