<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditorActivity" >

    <item
        android:id="@+id/trash"
        android:icon="@drawable/ic_trash"
        android:orderInCategory="100"
        android:title="@string/trash"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="100"
        android:title="@string/save"
        app:showAsAction="always"/>
    <item
        android:id="@+id/centralize_camera"
        android:icon="@drawable/ic_centralize"
        android:orderInCategory="100"
        android:title="@string/centralize"
        app:showAsAction="always"/>
    <item
        android:id="@+id/square"
        android:icon="@drawable/ic_cube"
        android:orderInCategory="100"
        android:title="@string/square"
        app:showAsAction="always"/>
</menu>